# CoreData

./: CMakeLists.txt  README.md  cmake-command.txt  rte2重构.docx
DataCore/: CBusinessAttributesManager.cpp  CBusinessAttributesManager.h  CJsonBase.h  CMakeLists.txt  CMakeLists.txt.bak  CSceneList.cpp  CSceneList.h  CTagsManager.cpp  CTagsManager.h  CTreeItem.cpp  CTreeItem.h  CallbackManager.cpp  CallbackManager.h  DataCoreInterface.cpp  DataCoreInterface.h  DataManager.cpp  DataManager.h  GlobalResource.cpp  GlobalResource.h  SceneDataType.h  config.cpp  config.h  dllMain.cpp  stdafx.cpp  stdafx.h
DataCore/GlobalSetting/: CAdvancedSetting.cpp  CAdvancedSetting.h  CDataPannelGlobalSetting.cpp  CDataPannelGlobalSetting.h  CGlobalSetting.cpp  CGlobalSetting.h  CMainViewpoint.cpp  CMainViewpoint.h  CProjectAreaContour.cpp  CProjectAreaContour.h  CProjectDataPannel.cpp  CProjectDataPannel.h  CProjectEffect.cpp  CProjectEffect.h  CProjectModel.cpp  CProjectModel.h  CProjectPOI.cpp  CProjectPOI.h  CProjectPathBrowsing.cpp  CProjectPathBrowsing.h  CProjectSimplePOI.cpp  CProjectSimplePOI.h  CProjectVegetation.cpp  CProjectVegetation.h  CProjectVehicleSimulation.cpp  CProjectVehicleSimulation.h  CProjectWeather.cpp  CProjectWeather.h  IGlobalSetting.h  IProjectTemplate.h  common.cpp  common.h  data.h
DataCore/Tool/: CMyCond.cpp  CMyCond.h  FileEx.cpp  TLog.cpp  TLog.h  XDefine.h  XFileUtil.cpp  XFileUtil.h  XStrUtil.cpp  XStrUtil.h  XTime.cpp  XTime.h
Demo/: CMakeLists.txt  demo.cpp
install/include/: DataCoreInterface.h
install/lib/windows/: DataCore.lib
